Fix overflowing last message display

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -461,6 +461,8 @@ main {
   .last-message {
     font-size: 1rem;
     color: #707070;
+    max-width: 85%;
+    overflow: clip;
   }
 }
 
